syntax = "proto3";

package generic_rpc;

option go_package = "mcp-gateway/pkg/rpc/proto";

service GenericService {
  rpc Exchange(GenericRequest) returns (GenericResponse) {}
  rpc Heartbeat(GenericRequest) returns (GenericResponse) {}
}

message GenericRequest {
  string code = 1;
  string client_ip = 2;
  string server = 3;
  string method = 5;
  string body = 7;
}

message GenericResponse {
  string code = 1;
  string node_ip = 2;
  int64 ts = 3;
  int32 status = 4;
  string data = 5;
  string message = 6;
}
